[build-system]
requires = ["setuptools >= 68", "wheel","setuptools-git >= 1.1", "pytest-runner", "toml", "reahl-component-metadata >= 7.0.0"]
build-backend = "setuptools.build_meta"

  
[project]
name = "domain-example"
version = "4.0"
dependencies = [
  "sqlalchemy-example>=4.0,<4.1",
  "declarative-example>=4.0,<4.1",
  "reahl-component"
]

[tool.setuptools.packages.find]
exclude = ["etc", "build", "dist"]

[tool.reahl-component]

[tool.reahl-component.versions.'3.1']
install_requires = [
  "sqlalchemy-example>=3.1,<3.2",
  "declarative-example>=3.1,<3.2"
]

[tool.reahl-component.versions.'3.0']
install_requires = [
  "sqlalchemy-example>=3.0,<3.1",
  "declarative-example>=3.0,<3.1"
]
