[build-system]
requires = ["setuptools >= 68", "wheel","setuptools-git >= 1.1", "pytest-runner", "toml", "reahl-component-metadata >= 7.0.0"]
build-backend = "setuptools.build_meta"

  
[project]
name = "myproject"
version = "2.0"
dependencies = [
  "domain-example>=4.0,<4.1",
  "declarative-example>=4.0,<4.1",
  "sqlalchemy-example>=4.0,<4.1",
  "reahl-sqlalchemysupport>=7.0,<7.1"
]

[tool.setuptools.packages.find]
exclude = ["etc", "build", "dist"]

[tool.reahl-component]

[tool.reahl-component.versions.'1.0']
install_requires = [
  "domain-example>=3.0,<3.1",
  "declarative-example>=3.0,<3.1",
  "sqlalchemy-example>=3.0,<3.1",
  "reahl-sqlalchemysupport>=7.0,<7.1"
]
