[build-system]
requires = ["setuptools >= 68", "wheel","setuptools-git >= 1.1", "pytest-runner", "toml", "reahl-component-metadata >= 7.0.0"]
build-backend = "setuptools.build_meta"

  
[project]
name = "myproject"
version = "2.0"
dependencies = [
  "project-b>=4.0,<4.1",
  "project-a>=4.0,<4.1",
  "project-c>=4.0,<4.1",
  "reahl-sqlalchemysupport>=7.0,<7.1"
]

[tool.setuptools.packages.find]
exclude = ["etc", "build", "dist"]

[tool.reahl-component]

[tool.reahl-component.versions.'1.0']
install_requires = [
  "project-b>=3.0,<3.1",
  "project-a>=3.0,<3.1",
  "project-c>=3.0,<3.1",
  "reahl-sqlalchemysupport>=7.0,<7.1"
]
