[build-system]
requires = ["setuptools >= 68", "wheel","setuptools-git >= 1.1", "pytest-runner", "toml", "reahl-component-metadata >= 7.0.0"]
build-backend = "setuptools.build_meta"

  
[project]
name = "project-a"
version = "1.4"
dependencies = [
  "project-c>=4.0,<4.1",
  "reahl-component>=7.0,<7.1"
]

[tool.setuptools.packages.find]
exclude = ["etc", "build", "dist"]

[tool.reahl-component]

[tool.reahl-component.versions.'1.3']
dependencies = [
  "project-c>=3.1,<3.2",
  "reahl-component>=7.0,<7.1"
]

[tool.reahl-component.versions.'1.2']
dependencies = [
  "project-c>=3.0,<3.1",
  "project-b>=2.0,<2.1",
  "reahl-component>=7.0,<7.1"
]
